@@ -1,23 +1,27 @@
-/* $Id: raw_ch.c,v 1.4.4.3.2.7 2010/09/29 06:23:48 uehira Exp $ */
+/* $Id: raw_ch.c,v 1.4.4.3.2.8 2010/10/12 13:38:30 uehira Exp $ */
 /* "raw_ch.c"    99.12.8 urabe */
 /*                  modified from raw_raw.c */
 /*                  byte-order-free */
 /*                  2000.3.21 c_save=shr->c; bug fixed */
 /*                  2000.4.24/2001.11.14 strerror() */
 /*                  2005.2.20 added fclose() in read_chfile() */
+/*                  2010.10.12 fixed bug : input data had been overwritten. */
+/*                             64bit clean. eobsize_in (auto) (uehira) */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
+
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
 
 #include <stdio.h>
 #include <signal.h>
 #include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
-#include <sys/types.h>
-#include <sys/ipc.h>
-#include <sys/shm.h>
+#include <errno.h>
 
 #if TIME_WITH_SYS_TIME
 #include <sys/time.h>
@@ -30,25 +34,33 @@
 #endif  /* !HAVE_SYS_TIME_H */
 #endif  /* !TIME_WITH_SYS_TIME */
 
-#include <sys/types.h>
-#include <errno.h>
-
 #include "winlib.h"
 
 /* #define DEBUG       0 */
 #define BELL        0
 
-int ch_table[WIN_CHMAX];
-char *progname,*logfile,chfile[256];
-int n_ch,negate_channel;
+static const char rcsid[] =
+  "$Id: raw_ch.c,v 1.4.4.3.2.8 2010/10/12 13:38:30 uehira Exp $";
+
+static int32_w ch_table[WIN_CHMAX];
+static char *chfile;
+static int n_ch,negate_channel;
+
+char *progname,*logfile;
 int syslog_mode=0, exit_status;
 
+/* prototypes */
+static void read_chfile(void);
+int main(int, char *[]);
+
+static void
 read_chfile()
   {
   FILE *fp;
   int i,j,k,kk;
   char tbuf[1024];
-  if(*chfile)
+
+  if(chfile!=NULL)
     {
     if((fp=fopen(chfile,"r"))!=NULL)
       {
@@ -58,7 +70,7 @@ read_chfile()
       if(negate_channel) for(i=0;i<WIN_CHMAX;i++) ch_table[i]=(-1);
       else for(i=0;i<WIN_CHMAX;i++) ch_table[i]=i;
       j=0;
-      while(fgets(tbuf,1024,fp))
+      while(fgets(tbuf,sizeof(tbuf),fp))
         {
         if(*tbuf=='#' || sscanf(tbuf,"%x%x",&k,&kk)<0) continue;
         k&=0xffff;
@@ -74,8 +86,10 @@ read_chfile()
       fprintf(stderr,"\n");
 #endif
       n_ch=j;
-      if(negate_channel) sprintf(tbuf,"%d channels exclusively",n_ch);
-      else sprintf(tbuf,"%d channels set",n_ch);
+      if(negate_channel)
+	snprintf(tbuf,sizeof(tbuf),"%d channels exclusively",n_ch);
+      else
+	snprintf(tbuf,sizeof(tbuf),"%d channels set",n_ch);
       write_log(tbuf);
       fclose(fp);
       }
@@ -84,7 +98,7 @@ read_chfile()
 #if DEBUG
       fprintf(stderr,"ch_file '%s' not open\n",chfile);
 #endif
-      sprintf(tbuf,"channel list file '%s' not open",chfile);
+      snprintf(tbuf,sizeof(tbuf),"channel list file '%s' not open",chfile);
       write_log(tbuf);
       write_log("end");
       exit(1);
@@ -99,26 +113,31 @@ read_chfile()
   signal(SIGHUP,(void *)read_chfile);
   }
 
-main(argc,argv)
-  int argc;
-  char *argv[];
+int
+main(int argc, char *argv[])
   {
   struct Shm  *shr,*shm;
   key_t rawkey,monkey;
   /* int shmid_raw,shmid_mon; */
-  unsigned long uni;
+  uint32_w uni;
   char tb[100];
-  unsigned char *ptr,*ptw,*ptr_lim,*ptr_save;
-  int sr,i,size,size_shm,tow;
+  uint8_w *ptr,*ptw,*ptr_lim,*ptr_save;
+  int  i,tow;
+  int eobsize_in, eobsize_in_count;
+  size_t  size_shm;
+  WIN_sr  sr;
+  uint32_w  size;
   unsigned long c_save;
-  unsigned short ch;
-  int gs,gh;
+  WIN_ch ch;
+  uint32_w gs;
 
   if((progname=strrchr(argv[0],'/')) != NULL) progname++;
   else progname=argv[0];
   exit_status=0;
   if(argc<4)
     {
+    WIN_version();
+    fprintf(stderr, "%s\n", rcsid);
     fprintf(stderr,
       " usage : '%s [in_key] [out_key] [shm_size(KB)] \\\n",
       progname);
@@ -128,21 +147,21 @@ main(argc,argv)
     }
   rawkey=atol(argv[1]);
   monkey=atol(argv[2]);
-  size_shm=atol(argv[3])*1000;
-  *chfile=0;
+  size_shm=(size_t)atol(argv[3])*1000;
+  chfile=NULL;
   if(argc>4)
     {
-    if(strcmp("-",argv[4])==0) *chfile=0;
+    if(strcmp("-",argv[4])==0) chfile=NULL;
     else
       {
       if(argv[4][0]=='-')
         {
-        strcpy(chfile,argv[4]+1);
+        chfile=argv[4]+1;
         negate_channel=1;
         }
       else
         {
-        strcpy(chfile,argv[4]);
+        chfile=argv[4];
         negate_channel=0;
         }
       }
@@ -178,30 +197,49 @@ reset:
   /*   shm->p=shm->c=0; */
   /*   shm->pl=(size_shm-sizeof(*shm))/10*9; */
   /*   shm->r=(-1); */
-  ptr=shr->d;
+  /* ptr=shr->d; */  /* verbose */
   while(shr->r==(-1)) sleep(1);
   ptr=shr->d+shr->r;
   tow=(-1);
 
+  size = mkuint4(ptr);
+  if (mkuint4(ptr + size - 4) == size)
+    eobsize_in = 1;
+  else
+    eobsize_in = 0;
+  eobsize_in_count = eobsize_in;
+  snprintf(tb,sizeof(tb),"eobsize_in=%d",eobsize_in);
+  write_log(tb);
+
   for(;;)
     {
-    ptr_lim=ptr+(size=mkuint4(ptr_save=ptr));
+    size=mkuint4(ptr_save=ptr);
+    if (mkuint4(ptr+size-4) == size) {
+      if (++eobsize_in_count == 0) eobsize_in_count = 1;
+    }
+    else eobsize_in_count=0;
+    if(eobsize_in && eobsize_in_count==0) goto reset;
+    if(!eobsize_in && eobsize_in_count>3) goto reset;
+    ptr_lim=ptr+size;
+    if(eobsize_in)
+      ptr_lim -= 4;
+
     c_save=shr->c;
     ptr+=4;
 #if DEBUG
-    for(i=0;i<6;i++) printf("%02X",ptr[i]);
+    for(i=0;i<12;i++) printf("%02X",ptr[i]);
     printf(" : %d R\n",size);
 #endif
   /* make output data */
     ptw=shm->d+shm->p;
     ptw+=4;               /* size (4) */
-    uni=time(NULL);
+    uni=(uint32_w)(time(NULL)-TIME_OFFSET);
     i=uni-mkuint4(ptr);
     if(i>=0 && i<1440)   /* with tow */
       {
       if(tow!=1)
         {
-        sprintf(tb,"with TOW (diff=%ds)",i);
+	snprintf(tb,sizeof(tb),"with TOW (diff=%ds)",i);
         write_log(tb);
         if(tow==0)
           {
@@ -230,38 +268,39 @@ reset:
 
     do    /* loop for ch's */
       {
-      gh=mkuint4(ptr);
-      ch=(gh>>16)&0xffff;
-      sr=gh&0xfff;
-      if((gh>>12)&0xf) gs=((gh>>12)&0xf)*(sr-1)+8;
-      else gs=(sr>>1)+8;
+      /* gh=mkuint4(ptr); */
+      /* ch=(gh>>16)&0xffff; */
+      /* sr=gh&0xfff; */
+      /* if((gh>>12)&0xf) gs=((gh>>12)&0xf)*(sr-1)+8; */
+      /* else gs=(sr>>1)+8; */
+      gs = win_get_chhdr(ptr, &ch, &sr);
       if(ch_table[ch]>=0)
         {
 #if DEBUG
         fprintf(stderr,"%04X->%04X(%5d)",ch,ch_table[ch],gs);
 #endif
+        memcpy(ptw,ptr,gs);
         if(ch_table[ch]!=ch)
           {
-          ptr[0]=(ch_table[ch]>>8);        
-          ptr[1]=(ch_table[ch]);        
+          ptw[0]=(ch_table[ch]>>8);        
+          ptw[1]=(ch_table[ch]);        
           }
-        memcpy(ptw,ptr,gs);
         ptw+=gs;
         }
       ptr+=gs;
       } while(ptr<ptr_lim);
     if(tow) i=14;
     else i=10;
-    if((uni=ptw-(shm->d+shm->p))>i)
+    if((uni=(uint32_w)(ptw-(shm->d+shm->p)))>i)
       {
-      uni=ptw-(shm->d+shm->p);
+      /* uni=ptw-(shm->d+shm->p); */  /* verbose? */
       shm->d[shm->p  ]=uni>>24; /* size (H) */
       shm->d[shm->p+1]=uni>>16;
       shm->d[shm->p+2]=uni>>8;
       shm->d[shm->p+3]=uni;     /* size (L) */
 
 #if DEBUG
-      for(i=0;i<6;i++) printf("%02X",shm->d[shm->p+4+i]);
+      for(i=0;i<12;i++) printf("%02X",shm->d[shm->p+4+i]);
       printf(" : %d M\n",uni);
 #endif
 
@@ -274,7 +313,7 @@ reset:
     fprintf(stderr,"\007");
     fflush(stderr);
 #endif
-    if((ptr=ptr_lim)>shr->d+shr->pl) ptr=shr->d;
+    if((ptr=ptr_save+size)>shr->d+shr->pl) ptr=shr->d;
     while(ptr==shr->d+shr->p) sleep(1);
     if(shr->c<c_save || mkuint4(ptr_save)!=size)
       {
